# hello-world-rpc

./: README.md  dune-project
client/src/: client.ml  client.mli  dune  main.ml
protocol/: dune  hello_world.ml  hello_world.mli
server/src/: config.ml  config.mli  dune  main.ml  server.ml  server.mli
